<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">E-Guru</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="zipcode">Zipcode</string>
    <string name="nationality">Nationality</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="type">Type</string>
    <string name="Selecttype">Select Type</string>
    <string name="submit">Submit</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="remenberpasword">Remember Password</string>
    <string name="forgotpass">Forgot Password</string>
    <string name="update">Update</string>
    <string name="Subject">Subject</string>
    <string name="Selectsubject">Select Subject</string>
    <string name="classes">Class</string>
    <string name="Selectclass">Select Class</string>
    <string name="enteremail">Enter Email</string>
    <string name="emailusername">Email/Username</string>
    <string name="Profile">Profile</string>
    <string name="Suggestedteachers">Suggested Teachers</string>
    <string name="StudyPlaces">Study Places</string>
    <string name="Chat">Chat</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="Home">Home</string>
    <string name="Appointment">Appointment</string>
    <string name="JobSearch">Job Search</string>
    <string name="AppliedJobs">Applied Jobs</string>
    <string name="ClearChat">Clear Chat</string>
    <string name="PersonalInformation">Personal Information</string>
    <string name="Name">Name</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="UserType">User Type</string>
    <string name="AvailabilityDays">Availability Days</string>
    <string name="AvailabilityTime">Availability Time</string>
    <string name="duration">Duration</string>
    <string name="CandidateChoice">Candidate Choice</string>
    <string name="SelectGender">Select Gender</string>
    <string name="Fees">Fees</string>
    <string name="currency">$</string>
    <string name="EnterFees">Enter Fees</string>
    <string name="Availability">Availability</string>
    <string name="Addtimeslote">Select Timeslot</string>
    <string name="SelectTeachingPlace">Select Teaching Place</string>
    <string name="Verification">Verification</string>
    <string name="InstituteName">Institute Name</string>
    <string name="YearOfPassing">Year Of Passing</string>
    <string name="DocumentCopy">Document Copy </string>
    <string name="Qualification">Qualification</string>
    <string name="Experience">Experience</string>
    <string name="Upload">Upload</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>
    <string name="Morning">Morning</string>
    <string name="Aftrnoon">Afternoon</string>
    <string name="Evening">Evening</string>
    <string name="To">to</string>
    <string name="blankmor">Morning(00:00 A.M to 00:00 A.M)</string>
    <string name="blankafter">Afternoon(00:00 P.M to 00:00 P.M)</string>
    <string name="blankeve">Evening(00:00 P.M to 00:00 P.M)</string>
    <string name="banner_home_footer">ca-app-pub-3940256099942544/6300978111</string>
    <string name="plzsignup">Please Signup</string>
    <string name="enterusername">Please enter Username</string>
    <string name="enterfullname">Please enter Fullname</string>
    <string name="enteremailid">Please enter Email</string>
    <string name="entervalidemail">Please enter Valid Email</string>
    <string name="enterpassword">Please enter Password</string>
    <string name="entercontactno">Please enter Phone Number</string>
    <string name="enteraddress">Please enter Address</string>
    <string name="entercity">Please enter City</string>
    <string name="enterzipcode">Please enter Zipcode</string>
    <string name="enterusernation">Please enter Nationality</string>
    <string name="enterprofession">Please select User Type.</string>
    <string name="enterdob">Please select Date Of Birth.</string>
    <string name="pleasewait">Please Wait...</string>
    <string name="fillnext">Please fill next section</string>
    <string name="networkerror">Cannot connect to Internet...Please check your connection!</string>
    <string name="servererror">The server could not be found. Please try again after some time!!</string>
    <string name="parsingerror">Parsing error! Please try again after some time!!</string>
    <string name="permissiondenied">permission denied</string>
    <string name="enterfee">Please enter fees</string>
    <string name="selecttimeslot">Please select timeslot</string>
    <string name="selectavailability">Please select availability</string>
    <string name="StudentHome">Student Home</string>
    <string name="TeacherHome">Teacher Home</string>
    <string name="PublicPlace">Public Place</string>
    <string name="LoginSucessfully">Login Successfully</string>
    <string name="Loginfailed">Credential Does Not Exist.</string>
    <string name="enteremailusername">Please enter Email/Username</string>
    <string name="passwordsent">Password successfully sent to your email address.</string>
    <string name="unableresponse">Unable to response</string>
    <string name="Jobs">Jobs</string>
    <string name="closeapp">Are you sure you would like to close E-Guru App?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="Category">Category</string>
    <string name="id">Photo Id</string>
    <string name="certificate">Certificate</string>
    <string name="choseid">Please choose Id.</string>
    <string name="chosecert">Please choose Certificate.</string>
    <string name="plzselectotherplace">Please select another Place.</string>
    <string name="plzentervalidmobile">Please enter valid phone number</string>
    <string name="Canceled">Canceled</string>
    <string name="askforcancel">Are you sure you want to Cancel this appointment?</string>
    <string name="paymentPending">Payment is not completed by student</string>
    <string name="enterreason">Please enter reason.</string>
    <string name="askforcomplete">Are you sure you want to Complete this appointment?</string>
    <string name="cantcomplete">You can not complete before class.</string>
    <string name="giverate">Give Rating</string>
    <string name="comeforclasses">Where would you welcome the classes?</string>
    <string name="taponmap">Please click on map for choose another location</string>
    <string name="noteacheravailable">No teachers available.</string>
    <string name="choseplace">Show place options</string>
    <string name="noclassavailable">No class available.</string>
    <string name="opencal">Open Calender</string>
    <string name="nostatus">No Status</string>
    <string name="SearchbyCategory">Search by Category</string>
    <string name="addfailed">Ad failed to load! error code: </string>
    <string name="teacherlist">Teachers</string>
    <string name="entercurrentpass">Please enter Current Password</string>
    <string name="enternewpass">Please enter New Password</string>
    <string name="enterconfirmpass">Please enter Confirm Password</string>
    <string name="passnotmatched">New Password and Confirm Password not matched</string>
    <string name="chooselang">Choose your language</string>
    <string name="subjectnotavailable">Subjects not available.</string>
    <string name="unableshowads">Unable To Show Ads</string>
    <string name="Confirm">Confirm</string>
    <string name="askforconfirm">Are you sure you want to confirm this appointment.</string>
    <string name="Complete">Complete</string>
    <string name="start_class">Start Class</string>
    <string name="Pay">Pay</string>
    <string name="InProcess">In Process</string>
    <string name="Pending">Pending</string>
    <string name="Completed">Completed</string>
    <string name="uconfirm">Unconfirm</string>
    <string name="areinterested">Are you interested.</string>
    <string name="arenotinterested">Are you not interested.</string>
    <string name="nostudent" translatable="false">No student available.</string>
    <string name="unconfirm">UNCONFIRM</string>
    <string name="confirm">CONFIRM</string>
    <string name="past">PAST</string>
    <string name="calender">CALENDAR</string>
    <string name="appoint">APPOINTMENT</string>
    <string name="entertagline">Please enter Tagline.</string>
    <string name="Tagline">Tagline</string>
    <string name="enterinstitute">Please enter Institute Name</string>
    <string name="enterpassingyear">Please enter year of passing</string>
    <string name="selectqualification">Select Qualification</string>
    <string name="plzselectqualification">Please select Qualification.</string>
    <string name="attachdoc1">Please attach Photo Id.</string>
    <string name="attachdoc2">Please attach Teaching Certificate.</string>
    <string name="enterqualification">Please enter Qualification</string>
    <string name="enterexp">Please enter Experience</string>
    <string name="infotab">INFORMATION</string>
    <string name="exptab">EXPERIENCE</string>
    <string name="selectcurrentdate">Please select current or future date</string>
    <string name="selectposttime">Please select post time from current time.</string>
    <string name="selectnexthour">Please select post time.</string>
    <string name="selectasduration">Please select time according to </string>
    <string name="selectstarttime">Please select start time.</string>
    <string name="selectdate">Please select date.</string>
    <string name="selectendtime">Please select end time</string>
    <string name="selectplace">Please select place</string>
    <string name="place">Select Place</string>
    <string name="noinfo">Information not available.</string>
    <string name="notavailable">There are no available slots for selected Day of Week.</string>
    <string name="selectotherdzate">Kindly select another date.</string>
    <string name="or">or</string>
    <string name="calldr">Call Teacher</string>
    <string name="changeinfo">Please change information you want to update</string>
    <string name="selectpic">Select Picture</string>
    <string name="updateother">  Are you want to update other information.</string>
    <string name="selectcountry">Select Country</string>
    <string name="clearchat">Clear Chat</string>
    <string name="askclearchat">Are you sure you want to clear all chat</string>
    <string name="nomsg">No Message</string>
    <string name="askdeletemsg">Are you sure you want to delete this message</string>
    <string name="msgdelete">Message Deleted</string>
    <string name="contactdelete">Contact deleted successsfully.</string>
    <string name="nouser">No users available</string>
    <string name="noclass">No Data available.</string>
    <string name="futuredate">Future date appointment can not be completed</string>
    <string name="plzselectdate">Please select date.</string>
    <string name="nomore">No more appointments</string>
    <string name="liketosign">Would you like to sign in as</string>
</resources>