<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/account"
            android:icon="@drawable/ic_profile"
            android:title="@string/Profile"
            android:checked="false"
            />
        <item
            android:id="@+id/appointment"
            android:icon="@drawable/appointment"
            android:title="@string/Appointment"
            android:checked="false"
            app:actionLayout="@layout/menu_counter"
            />
        <item
            android:id="@+id/jobapply"
            android:icon="@drawable/jobsearch"
            android:title="@string/JobSearch"
            android:checked="false"
            app:actionViewClass="android.widget.TextView"
            />
        <item
            android:id="@+id/jobapplied"
            android:icon="@drawable/businessman"
            android:title="@string/AppliedJobs"
            android:checked="false"
            />
        <item
            android:id="@+id/chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/Chat"
            android:checked="false"
            />
        <item
            android:id="@+id/wallet"
            android:icon="@drawable/ic_wallet"
            android:title="Wallet"
            android:checked="false"
            />



        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/Settings"
            android:checked="false"
            />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/Logout"
            android:checked="false"
            />
    </group>
</menu>
