<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:id="@+id/notavailable">
        <TextView
            android:id="@+id/tv_notavailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/notavailable"
            android:textAlignment="center"
            android:textSize="14dp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/tv_kindly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/selectotherdzate"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="14dp"
            android:layout_below="@+id/tv_notavailable"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_kindly"
            android:id="@+id/tv_or"
            android:text="@string/or"
            android:textSize="15dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:visibility="invisible"/>
        <Button
            android:id="@+id/btn_calldr"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_below="@+id/tv_or"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/recangle_shape"
            android:textColor="@color/black"
            android:text="@string/calldr"
            android:textSize="17dp"
            android:textAllCaps="false"
            android:visibility="invisible"/>
    </RelativeLayout>
</layout>