<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/class_reg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <RelativeLayout
                    android:id="@+id/rel_first"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"

                    >

                    <ImageView
                        android:id="@+id/top_img"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginLeft="-260dp"
                        android:layout_marginTop="-45dp"
                        android:layout_marginRight="100dp"
                        android:src="@drawable/top_img" />

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_alignBottom="@id/top_img"
                        android:layout_marginBottom="20dp"
                        android:src="@drawable/final_logo" />


                </RelativeLayout>




                <RelativeLayout
                    android:id="@+id/bottom"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_alignParentBottom="true">

                    <ImageView
                        android:id="@+id/im_bottom"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="-50dp"
                        android:layout_marginRight="-100dp"
                        android:layout_marginBottom="-8dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/bottom_img_dark" />


                    <ImageView
                        android:id="@+id/im_bottom_light"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="-80dp"
                        android:layout_marginRight="-100dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/bottom_img_light" />


                </RelativeLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/rel_first"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="15dp"
                    android:background="@mipmap/rectangle_background"
                 >

                <RelativeLayout
                    android:id="@+id/im_verify"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                  >



                <TextView
                    android:id="@+id/tv_show_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/register"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <View
                    android:layout_width="100dp"
                    android:layout_height="1dp"

                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_toRightOf="@+id/tv_show_signup"
                    android:background="@color/red" />

                <TextView
                    android:id="@+id/tv_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_show_signup"
                    android:layout_below="@+id/tv_show_signup"
                    android:layout_marginTop="30dp"
                    android:text="@string/Subject"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/subject_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_show_signup"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@+id/tv_subject"
                    android:background="@drawable/spiner_border"
                    android:drawableRight="@mipmap/ic_menu_down_grey600_24dp"
                    android:drawableTint="@color/colorPrimary"
                    android:text="@string/Selectsubject"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_classes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_show_signup"
                    android:layout_below="@+id/subject_spinner"
                    android:layout_marginTop="30dp"
                    android:text="@string/classes"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/class_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/subject_spinner"
                    android:layout_below="@+id/subject_spinner"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@+id/tv_classes"
                    android:background="@drawable/spiner_border"
                    android:drawableRight="@mipmap/ic_menu_down_grey600_24dp"
                    android:drawableTint="@color/colorPrimary"
                    android:text="@string/Selectclass"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_teachergengerchoice"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_show_signup"
                    android:layout_below="@+id/class_spinner"
                    android:layout_marginTop="20dp"
                    android:text="@string/CandidateChoice"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/choicegender_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/subject_spinner"
                    android:layout_below="@+id/class_spinner"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@+id/tv_classes"
                    android:background="@drawable/spiner_border"
                    android:drawableRight="@mipmap/ic_menu_down_grey600_24dp"
                    android:drawableTint="@color/colorPrimary"
                    android:text="@string/SelectGender"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_fee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_show_signup"
                    android:layout_below="@+id/choicegender_spinner"
                    android:layout_marginTop="30dp"
                    android:text="@string/Fees"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

<!--                <include-->
<!--                    android:id="@+id/currency_dropdown"-->
<!--                    layout="@layout/spinnerlayoutmornig"-->
<!--                    android:layout_width="100dp"-->
<!--                    android:layout_height="35dp"-->
<!--                    android:layout_alignLeft="@+id/choicegender_spinner"-->
<!--                    android:layout_alignTop="@+id/tv_doller"-->
<!--                    android:layout_marginLeft="10dp"-->
<!--                    android:layout_toRightOf="@+id/tv_fee" />-->


                    <TextView
                        android:id="@+id/currency_dropdown"
                        android:layout_width="80dp"
                        android:layout_height="35dp"
                        android:layout_alignLeft="@+id/choicegender_spinner"
                        android:layout_alignTop="@+id/tv_doller"
                        android:layout_marginLeft="20dp"
                        android:layout_toRightOf="@+id/tv_fee"
                        android:background="@drawable/spiner_border"
                        android:gravity="center|center_horizontal"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_doller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/choicegender_spinner"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_toRightOf="@+id/currency_dropdown"
                    android:paddingTop="5dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/et_fee"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tv_doller"
                    android:layout_below="@+id/choicegender_spinner"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_toRightOf="@+id/currency_dropdown"
                    android:background="@null"
                    android:hint="@string/EnterFees"
                    android:inputType="number"
                    android:maxLength="5"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignLeft="@+id/et_fee"
                    android:layout_below="@+id/et_fee"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_availability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/tv_classes"
                    android:layout_below="@+id/tv_fee"
                    android:layout_marginTop="30dp"
                    android:text="@string/Availability"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <View
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_below="@+id/tv_fee"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_toRightOf="@+id/tv_availability"
                    android:background="@color/red" />

                <TextView
                    android:id="@+id/tv_timeslot"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/time_spinner"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/spiner_border"
                    android:drawableRight="@mipmap/ic_chevron_right_grey600_24dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:paddingTop="10dp"
                    android:text="@string/Addtimeslote"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/showtimeslote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_timeslot"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/spiner_border"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <include
                    android:id="@+id/time_spinner"
                    layout="@layout/spinnerlayout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/tv_availability"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                   />

                <include
                    android:id="@+id/teaching_place"
                    layout="@layout/spinnerlayout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/showtimeslote"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="160dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/teaching_place"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/bothsidecorner"
                    android:text="@string/submit"
                    android:textAllCaps="true"
                    android:textColor="@color/white" />
                </RelativeLayout>
                </ScrollView>
            </RelativeLayout>

    </RelativeLayout>
</layout>